zink on hasvk regression: Assertion `(dyn)->vi_binding_strides[first_binding + i] == (strides[i])' failed.
After Mesa commit 76725452 Zink on Haswell/HasVK bombs out with most OpenGL applications (Plain old "glxgears" works tho).
darkplaces-sdl: ../src/vulkan/runtime/vk_graphics_state.c:2111: vk_cmd_set_vertex_binding_strides: Assertion `(dyn)->vi_binding_strides[first_binding + i] == (strides[i])' failed.
+maintenance flush register-cache
Register cache flushed.
+set args -basedir /usr/share/games/quake/
+run
Starting program: /home/ccr/bin/darkplaces-sdl -basedir /usr/share/games/quake/
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
warning: Can't read data for section '.debug_info' in file '/usr/lib/debug/.build-id/86/5f05f04568533c17a8de8c4386914f123edcf9.debug'
warning: Section .debug_aranges in /usr/lib/debug/.build-id/86/5f05f04568533c17a8de8c4386914f123edcf9.debug entry at offset 0 debug_info_offset 0 does not exists, ignoring .debug_aranges.
[New Thread 0x7fffe71ff6c0 (LWP 299573)]
[New Thread 0x7fffe69fe6c0 (LWP 299574)]
[New Thread 0x7fffe61fd6c0 (LWP 299575)]
[New Thread 0x7fffe58bb6c0 (LWP 299576)]
[New Thread 0x7fffe50ba6c0 (LWP 299577)]
[New Thread 0x7fffe48b96c0 (LWP 299578)]
[New Thread 0x7fffcfdff6c0 (LWP 299579)]
[New Thread 0x7fffcf5fe6c0 (LWP 299580)]
[New Thread 0x7fffcedfd6c0 (LWP 299581)]
[Thread 0x7fffcedfd6c0 (LWP 299581) exited]
[Thread 0x7fffcf5fe6c0 (LWP 299580) exited]
[Thread 0x7fffcfdff6c0 (LWP 299579) exited]
[New Thread 0x7fffcfdff6c0 (LWP 299582)]
[New Thread 0x7fffcedfd6c0 (LWP 299583)]
[New Thread 0x7fffcf5fe6c0 (LWP 299584)]
[New Thread 0x7fffcdef96c0 (LWP 299585)]
[New Thread 0x7fffcd6f86c0 (LWP 299586)]
[New Thread 0x7fffccef76c0 (LWP 299587)]
[New Thread 0x7fffbbfff6c0 (LWP 299588)]
[New Thread 0x7fffbb7fe6c0 (LWP 299589)]
[New Thread 0x7fffbaffd6c0 (LWP 299592)]
[New Thread 0x7fffb9feb6c0 (LWP 299593)]
Thread 1 "darkplaces-sdl" received signal SIGABRT, Aborted.
__pthread_kill_implementation (threadid=<optimized out>, signo=signo@entry=6, no_tid=no_tid@entry=0) at ./nptl/pthread_kill.c:44
44 ./nptl/pthread_kill.c: No such file or directory.
+bt
#0 __pthread_kill_implementation (threadid=<optimized out>, signo=signo@entry=6, no_tid=no_tid@entry=0) at ./nptl/pthread_kill.c:44
#1 0x00007ffff7adb15f in __pthread_kill_internal (signo=6, threadid=<optimized out>) at ./nptl/pthread_kill.c:78
#2 0x00007ffff7a8d472 in __GI_raise (sig=sig@entry=6) at ../sysdeps/posix/raise.c:26
#3 0x00007ffff7a774b2 in __GI_abort () at ./stdlib/abort.c:79
#4 0x00007ffff7a773d5 in __assert_fail_base (fmt=0x7ffff7bebdc8 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=assertion@entry=0x7fffe7b94d88 "(dyn)->vi_binding_strides[first_binding + i] == (strides[i])", file=file@entry=0x7fffe7b94490 "../src/vulkan/runtime/vk_graphics_state.c", line=line@entry=2111, function=function@entry=0x7fffe7c206c0 <__PRETTY_FUNCTION__.54> "vk_cmd_set_vertex_binding_strides") at ./assert/assert.c:92
#5 0x00007ffff7a863a2 in __assert_fail (assertion=assertion@entry=0x7fffe7b94d88 "(dyn)->vi_binding_strides[first_binding + i] == (strides[i])", file=file@entry=0x7fffe7b94490 "../src/vulkan/runtime/vk_graphics_state.c", line=line@entry=2111, function=function@entry=0x7fffe7c206c0 <__PRETTY_FUNCTION__.54> "vk_cmd_set_vertex_binding_strides") at ./assert/assert.c:101
#6 0x00007fffe767c52b in vk_cmd_set_vertex_binding_strides (cmd=<optimized out>, first_binding=<optimized out>, binding_count=<optimized out>, strides=<optimized out>) at ../src/vulkan/runtime/vk_graphics_state.c:2111
#7 0x00007ffff31c57dd in zink_bind_vertex_buffers<(zink_dynamic_state)2> (batch=batch@entry=0x555557e5f870, ctx=ctx@entry=0x555557e5f2c0) at ../src/gallium/drivers/zink/zink_draw.cpp:171
#8 0x00007ffff31f56b6 in zink_draw<(zink_multidraw)1, (zink_dynamic_state)2, true, false> (pctx=0x555557e5f2c0, dinfo=<optimized out>, drawid_offset=<optimized out>, dindirect=0x0, draws=<optimized out>, num_draws=<optimized out>, partial_velem_mask=<optimized out>, vstate=<optimized out>) at ../src/gallium/drivers/zink/zink_draw.cpp:886
#9 0x00007ffff30a2bc7 in tc_call_draw_single (pipe=<optimized out>, call=0x5555581e6400, last_ptr=<optimized out>) at ../src/gallium/auxiliary/util/u_threaded_context.c:3682
#10 0x00007ffff309c169 in batch_execute (parsing=false, last=0x5555581e6598, pipe=0x555557e5f2c0, batch=0x5555581e60f8) at ../src/gallium/auxiliary/util/u_threaded_context.c:394
#11 tc_batch_execute (job=job@entry=0x5555581e60f8, gdata=gdata@entry=0x0, thread_index=thread_index@entry=0) at ../src/gallium/auxiliary/util/u_threaded_context.c:445
#12 0x00007ffff309f962 in _tc_sync (tc=tc@entry=0x5555581e4040, func=<optimized out>, info=<optimized out>) at ../src/gallium/auxiliary/util/u_threaded_context.c:680
#13 0x00007ffff309fcdc in tc_texture_map (_pipe=0x5555581e4040, resource=0x5555585fb0c0, level=0, usage=2, box=0x7fffffffcad0, transfer=0x7fffffffca08) at ../src/gallium/auxiliary/util/u_threaded_context.c:2702
#14 0x00007ffff2b2dfd8 in pipe_texture_map_3d (transfer=0x7fffffffca08, d=1, h=200, w=320, z=0, y=0, x=0, access=2, level=0, resource=0x5555585fb0c0, context=0x5555581e4040) at ../src/gallium/auxiliary/util/u_inlines.h:577
#15 st_TexSubImage (ctx=ctx@entry=0x555558218480, dims=dims@entry=2, texImage=texImage@entry=0x5555585f9f90, xoffset=xoffset@entry=0, yoffset=yoffset@entry=0, zoffset=zoffset@entry=0, width=320, height=200, depth=1, format=32993, type=5121, pixels=0x555558cce340, unpack=0x555558249640) at ../src/mesa/state_tracker/st_cb_texture.c:2266
#16 0x00007ffff2b2ee89 in st_TexImage (ctx=ctx@entry=0x555558218480, dims=dims@entry=2, texImage=texImage@entry=0x5555585f9f90, format=format@entry=32993, type=type@entry=5121, pixels=pixels@entry=0x555558cce340, unpack=0x555558249640) at ../src/mesa/state_tracker/st_cb_texture.c:2364
#17 0x00007ffff2affea1 in teximage (no_error=false, pixels=<optimized out>, imageSize=<optimized out>, type=<optimized out>, format=<optimized out>, border=0, depth=<optimized out>, height=<optimized out>, width=<optimized out>, internalFormat=6407, level=<optimized out>, target=3553, texObj=<optimized out>, dims=<optimized out>, compressed=compressed@entry=0 '\000', ctx=0x555558218480) at ../src/mesa/main/teximage.c:3298
#18 teximage_err (ctx=0x555558218480, compressed=compressed@entry=0 '\000', dims=dims@entry=2, target=3553, level=<optimized out>, internalFormat=<optimized out>, width=<optimized out>, height=<optimized out>, depth=<optimized out>, border=<optimized out>, format=<optimized out>, type=<optimized out>, imageSize=<optimized out>, pixels=<optimized out>) at ../src/mesa/main/teximage.c:3330
#19 0x00007ffff2b02fc1 in _mesa_TexImage2D (target=<optimized out>, level=<optimized out>, internalFormat=<optimized out>, width=<optimized out>, height=<optimized out>, border=<optimized out>, format=32993, type=5121, pixels=0x555558cce340) at ../src/mesa/main/teximage.c:3401
#20 0x00005555556dcfec in R_UploadFullTexture (glt=0x5555582be8d0, data=0x555558cce340 "") at ../../../gl_textures.c:1056
#21 0x00005555556ddee1 in R_SetupTexture (rtexturepool=0x55555828e0e0, identifier=0x555558327478 "gfx/conback", width=320, height=200, depth=1, sides=1, flags=32, miplevel=0, textype=TEXTYPE_BGRA, texturetype=0, data=0x555558cce340 "", palette=0x0) at ../../../gl_textures.c:1333
#22 0x00005555556de039 in R_LoadTexture2D (rtexturepool=0x55555828e0e0, identifier=0x555558327478 "gfx/conback", width=320, height=200, data=0x555558cce340 "", textype=TEXTYPE_BGRA, flags=33, miplevel=0, palette=0x0) at ../../../gl_textures.c:1354
#23 0x00005555556ae5a6 in R_SkinFrame_LoadExternal_SkinFrame (skinframe=0x555558327420, name=0x55555645521c <cachepics+22748> "gfx/conback", textureflags=33, complain=true, fallbacknotexture=false) at ../../../gl_rmain.c:2401
#24 0x00005555556ae16a in R_SkinFrame_LoadExternal (name=0x55555645521c <cachepics+22748> "gfx/conback", textureflags=-2147483615, complain=true, fallbacknotexture=false) at ../../../gl_rmain.c:2330
#25 0x00005555556a0639 in Draw_CachePic_Flags (path=0x5555558d09c1 "gfx/conback", cachepicflags=256) at ../../../gl_draw.c:167
#26 0x0000555555675112 in Con_DrawConsole (lines=472) at ../../../console.c:2010
#27 0x000055555562aa42 in SCR_DrawConsole () at ../../../cl_screen.c:703
#28 0x000055555562edfb in SCR_DrawScreen () at ../../../cl_screen.c:1752
#29 0x0000555555630920 in CL_UpdateScreen () at ../../../cl_screen.c:2320
#30 0x000055555562f159 in SCR_BeginLoadingPlaque (startup=true) at ../../../cl_screen.c:1841
#31 0x00005555556e3b27 in Host_Init () at ../../../host.c:507
#32 0x00005555556e42df in Host_Main () at ../../../host.c:729
#33 0x000055555559b1dc in main (argc=3, argv=0x7fffffffde88) at ../../../sys_sdl.c:222
+q